--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,11 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 build:
-  verbosity: minimal
+  verbosity: detailed
+
+install:
+  - set QTDIR=C:\Qt\5.10.1\mingw53_32
+  - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+build_script:
+  - qmake QtTest.pro
+  - mingw32-make
