--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,5 @@ install:
   - set QTDIR=C:\Qt\5.10.1\mingw53_32
   - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
 build_script:
-  - qmake QtTest.pro
+  - qmake CloudBuildTest.pro
   - mingw32-make
