--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,8 @@ build:
 
 install:
   - set QTDIR=C:\Qt\5.10.1\mingw53_32
-  - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+  - set QTTOOLS=C:\Qt\Tools\mingw530_32
+  - set PATH=%PATH%;%QTDIR%\bin;%QTTOOLS%\bin;C:\MinGW\bin
 build_script:
   - qmake CloudBuildTest.pro
   - mingw32-make
