--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,4 +9,4 @@ install:
   - set PATH=%PATH%;%QTDIR%\bin;%QTTOOLS%\bin;C:\MinGW\bin
 build_script:
   - qmake.exe CloudBuildTest.pro -spec win32-g++
-  - mingw32-make.exe
+  - mingw32-make.exe -f Makefile.Release
