--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,9 @@ phases:
   pre_build:
     commands:
       - echo "--- pre_build commands"
-      - $env:Path = "$env:QTDIR\bin;$env:QTTOOLS\bin;$env:Path"
+      - echo $env:QTDIR
+      - echo $env:QTTOOLS
+      - '$env:Path = "$env:QTDIR\bin;$env:QTTOOLS\bin;$env:Path"'
+      - echo $env:Path
       - qmake.exe --version
       - mingw32-make.exe --version
