--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,3 +26,5 @@ phases:
 artifacts:
   files:
     - release\CloudBuildTest.exe
+  name: release-$CODEBUILD_BUILD_NUMBER.zip
+  discard-paths: yes    
