--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
@@ -17,7 +12,6 @@ steps:
       architecture: 'x64'
 
   - script: |
-      cd $(Build.SourcesDirectory)
       python -m pip install aqtinstall
     displayName: 'Install Another Qt installer https://github.com/miurahr/aqtinstall/'
 
@@ -29,16 +23,21 @@ steps:
     displayName: 'Install Qt 5.10.0'
 
   - script: |
-      cd $(Build.BinariesDirectory)
-      $(Build.BinariesDirectory)\\Qt\\5.10.0\\mingw53_32\\bin\\qmake.exe --version
-      $(Build.BinariesDirectory)\\Qt\\Tools\\mingw530_32\\bin\\mingw32-make.exe --version
+      set QTDIR=$(Build.BinariesDirectory)\\Qt\\5.10.0\\mingw53_32
+      set QTTOOLS=$(Build.BinariesDirectory)\\Qt\\Tools\\mingw530_32
+      set PATH=%PATH%;%QTDIR%\\bin;%QTTOOLS%\\bin
+      qmake.exe --version
+      mingw32-make.exe --version
     displayName: 'Test Qt 5.10.0'
 
   - script: |
       cd $(Build.SourcesDirectory)
-      $(Build.BinariesDirectory)\\Qt\\5.10.0\\mingw53_32\\bin\\qmake.exe CloudBuildTest.pro -spec win32-g++
-      $(Build.BinariesDirectory)\\Qt\\Tools\\mingw530_32\\bin\\mingw32-make.exe qmake_all
-      $(Build.BinariesDirectory)\\Qt\\Tools\\mingw530_32\\bin\\mingw32-make.exe -f Makefile.Release
+      set QTDIR=$(Build.BinariesDirectory)\\Qt\\5.10.0\\mingw53_32\\bin
+      set QTTOOLS=$(Build.BinariesDirectory)\\Qt\\Tools\\mingw530_32\\bin
+      set PATH=%PATH%;%QTDIR%\bin;%QTTOOLS%\bin;C:\MinGW\bin
+      qmake.exe CloudBuildTest.pro -spec win32-g++
+      mingw32-make.exe qmake_all
+      mingw32-make.exe -f Makefile.Release
     displayName: 'Build Project'    
   - task: CopyFiles@2
     inputs:
